test share layout

--- a/index.html
+++ b/index.html
@@ -66,22 +66,22 @@
 
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://skyshards.com/" />
+    <meta property="og:url" content="https://greenhouse.skyshards.com/" />
     <meta property="og:title" content="SkyShards Greenhouse - Hypixel SkyBlock Greenhouse Tools" />
     <meta property="og:description" content="Optimize your Greenhouse layout with the calculator and designer. Auto-solve mutations like Gloomgourd and design easily sharable layouts" />
-    <meta property="og:image" content="https://skyshards.com/screenshots/calculator.png" />
+    <meta property="og:image" content="https://greenhouse.skyshards.com/screenshots/calculator.png" />
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://skyshards.com/" />
+    <meta property="twitter:url" content="https://greenhouse.skyshards.com/" />
     <meta property="twitter:title" content="SkyShards Greenhouse - Hypixel SkyBlock Tools" />
     <meta property="twitter:description" content="Optimize your Greenhouse layout with the calculator and designer. Auto-solve mutations like Gloomgourd and design easily sharable layouts" />
-    <meta property="twitter:image" content="https://skyshards.com/screenshots/calculator.png" />
+    <meta property="twitter:image" content="https://greenhouse.skyshards.com/screenshots/calculator.png" />
 
     <!-- Additional SEO -->
     <meta name="theme-color" content="#8b5cf6" />
     <meta name="msapplication-TileColor" content="#8b5cf6" />
-    <link rel="canonical" href="https://skyshards.com/" />
+    <link rel="canonical" href="https://greenhouse.skyshards.com/" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&display=swap" rel="stylesheet" />
@@ -93,14 +93,14 @@
         "@type": "WebApplication",
         "name": "SkyShards Greenhouse",
         "alternateName": "SkyShards Greenhouse Calculator and Designer",
-        "url": "https://skyshards.com",
+        "url": "https://greenhouse.skyshards.com",
         "description": "Optimize your Greenhouse layout with the calculator and designer. Auto-solve mutations like Gloomgourd and design easily sharable layouts",
         "applicationCategory": "GameApplication",
         "operatingSystem": "Web",
         "browserRequirements": "Requires JavaScript. Requires HTML5.",
         "softwareVersion": "2.0",
         "releaseNotes": "Greenhouse calculator and layout designer",
-        "screenshot": "https://skyshards.com/screenshots/calculator.png",
+        "screenshot": "https://greenhouse.skyshards.com/screenshots/calculator.png",
         "offers": {
           "@type": "Offer",
           "price": "0",
@@ -110,12 +110,12 @@
         "author": {
           "@type": "Organization",
           "name": "SkyShards",
-          "url": "https://skyshards.com"
+          "url": "https://greenhouse.skyshards.com"
         },
         "publisher": {
           "@type": "Organization",
           "name": "SkyShards",
-          "url": "https://skyshards.com"
+          "url": "https://greenhouse.skyshards.com"
         },
         "audience": {
           "@type": "Audience",
